[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pymultienv"
version = "0.0.5"
requires-python = ">=3.12"
authors = [
	{ name = "Mark Veltzer", email = "mark.veltzer@gmail.com" }
]
maintainers = [
	{ name = "Mark Veltzer", email = "mark.veltzer@gmail.com" }
]
description = "pymultienv is a command to help you deal with multiple python environments"
readme = "README.md"
license = "MIT"
keywords=[
    "git",
    "python",
    "repositories",
    "multiple",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "gitpython",
    "pyfakeuse",
]

[project.urls]
"Homepage" = "https://github.com/veltzer/pymultienv"
"Bug Tracker" = "https://github.com/veltzer/pymultienv/issues"
"Documentation" = "https://veltzer.github.io/pymultienv"
"Download" = "https://pypi.org/project/pymultienv/"
"Repository" = "https://github.com/veltzer/pymultienv"

[project.scripts]
pymultienv = "pymultienv.me:cli"

[tool.ruff]
line-length = 130

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/pymultienv"]

[tool.hatch.build.targets.sdist]
include = [
    "src/pymultienv/",
    "README.md",
    "LICENSE",
    "pyproject.toml"
]
exclude = [
    ".gitignore",
    ".github/",
    "tests/",
    "docs/",
    "config/",
    "*.md",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[tool.hatch.envs.default]
installer = "uv"

[tool.uv.pip]
prerelease = "disallow"
